Fixed header bar height being off by one pixel between FF and Chrome; made blog createjs example backgrounds a less ugly colour. (darkkhaki → grey)

--- a/css/Blog.css
+++ b/css/Blog.css
@@ -37,7 +37,7 @@
 }
 #content-pane iframe {
   overflow: hidden;
-  background-color: darkkhaki;
+  background-color: #6C7175;
   border-width: 0;
   display: block;
 }
