--- a/css/Blog.css.less
+++ b/css/Blog.css.less
@@ -43,7 +43,7 @@
 	
 	iframe {
 		overflow: hidden;
-		background-color: darkkhaki;
+		background-color: #6C7175;
 		border-width: 0;
 		display: block;
 	}
