--- a/css/Blog.css.less
+++ b/css/Blog.css.less
@@ -6,6 +6,10 @@
 		margin-right: auto;
 		clear: both;
 	}
+	img.emote {
+		display: inline;
+		clear: none;
+	}
 
 	figure {
 		margin: 0px;
@@ -57,5 +61,13 @@
 	hr {
 		margin-top:    5em;
 		margin-bottom: 5em;
+	}
+	
+	h3 {
+		clear: right;
+	}
+	
+	img.emote {
+		
 	}
 }
