--- a/Blog Posts/03.CreateJS Examples.html.haml
+++ b/Blog Posts/03.CreateJS Examples.html.haml
@@ -11,6 +11,10 @@
 			<button onclick=\"createjsExamples.show('#{id}', '#{targetURL}');\">code</button>
 		</div>"
 	end
+	
+	def emote(name) #Insert an emoticon from /images/wesnoth icons/icon_«name».gif.
+		return "<img class=\"emote\" src=\"images/wesnoth icons/icon_#{name}.gif\">"
+	end
 :javascript
 	"use strict";
 	var createjsExamples = {
@@ -131,17 +135,18 @@
 	})();
 		
 	
-%p{:style => "font-size: 10px;"} Note: Some examples were previously discussed in the October 2013 issue of the <a href="http://sdjournal.org/">Software Developer's Journal</a>.
+%p{:style => "font-size: 10px;"} Note: Some examples were previously discussed in the October 2013 issue of the <a href="http://sdjournal.org/">Software Developer's Journal</a>. Some updates were made as of August 2014.
 %span{:"data-code-viewer-scan" => "start"}
-%p I have found it difficult to find nice, simple examples of how to lay out an <a href="http://createjs.com/#!/EaselJS" class="external">EaselJS</a> program. The documentation is nice, but while it does an excellent job of covering the nuts and bolts of the library I find that some additional assembly instructions would be helpful. So, in rough order of my progression through the library, here are 5 examples:
+%p I have found it difficult to find nice, simple examples of how to lay out an <a href="http://createjs.com/#!/EaselJS" class="external">EaselJS</a> program. The <a href="http://createjs.com/Docs/EaselJS/modules/EaselJS.html">documentation</a> and <a href="https://github.com/CreateJS/">examples</a> generally do a good job of covering the nuts and bolts of the library, but I find that some additional assembly instructions would be helpful. So, in rough order of my progression through the library, here are 5 examples:
+
 
 
 %h3 Example 1: A Basic Scene
 = codeViewer("clouds-1", 300, 150, "~/1-0 Clouds.html")
 %script createjsExamples.play('clouds-1', 'Blog Posts/03.CreateJS Examples/1-0 Clouds.html'); //A sort of 'hook' for the post, perhaps? Ideally, would only be enabled if this were the first post on the page.
-%p We'll start with a small platformer mockup, very basic. In it, we want to have some clouds float behind the player. We'll create a new HTML file, <span class="cjs-line 5">import our library</span>, and write a simple scene. (You can grab the library yourself from <a class="external" href="http://code.createjs.com/createjs-2013.05.14.min.js">http://code.createjs.com/createjs-2013.05.14.min.js</a>.)
+%p We'll start with a small platformer mockup, very basic. In it, we want to have some clouds float behind the player. We'll create a new HTML file, <span class="cjs-line 5">import our library</span>, and write a simple scene. (You can grab the library I used from <a class="external" href="http://code.createjs.com/createjs-2013.05.14.min.js">http://code.createjs.com/createjs-2013.05.14.min.js</a>. Other versions are available on the <a href="http://code.createjs.com/">CDN page</a>.)
 %p As a first attempt, we add the <span class="cjs-line 25">ground</span>, <span class="cjs-line 30">a cloud</span>, and <span class="cjs-line 41">an actor</span>. Since we're planning to add more clouds later, we've made that code a function. And – what do you know, it works! Our little cloud wafts gently across the sky, behind our actor.
-%p (Aside: To view the code for the example, I recommend moving the tab the 'code' button opens to a new window. When you mouse over the highlights here, they'll highlight there as well. A more reliable way to view the code might be to play the example, and then select 'view frame source' from the right-click menu. The code is also available on <a href="https://github.com/DDR0/ddr0.github.com/tree/master/Blog%20Posts/03.CreateJS%20Examples">Github</a>.)
+%p (Aside: To view the code for the example, I recommend moving the tab the 'code' button opens to a new window… the popup code can be a bit flaky. When you mouse over the highlights here, they'll highlight there as well. A more reliable way to view the code might be to play the example, and then select 'view frame source' from the right-click menu. The code is also available on <a href="https://github.com/DDR0/ddr0.github.com/tree/master/Blog%20Posts/03.CreateJS%20Examples">Github</a>.)
 
 = codeViewer("clouds-2", 300, 150, "~/1-1 Clouds.html")
 %p Here, we've added <span class="cjs-line 30 31 32 33">a function to add clouds to our scene every two seconds</span>. While the first cloud works just fine, the other clouds float over our player because they're added after the player is. An index-based solution, like "add this after the first 5 objects", will be a rolling disaster. The best way I've found so far to deal with this problem, generally, is to have named z-orders. Even giving z-orders by an arbitrary number grows difficult to manage after a while.
@@ -164,8 +169,16 @@
 %p Now, making sure we stop the first example before measuring the CPU usage of the second, we find that our game only uses a little bit of our available CPU. My edition of Chrome reports about 15% usage, and I don't experience the lag that the first version had.
 %p Many older games drew the mouse cursor on screen in the manner we draw the blue bars here. This was because the common operating systems at the time could only render a simple black-and-white image as a custom cursor. This introduced around one to three frames of delay between moving the mouse and seeing the results, depending on how many steps the rendering pipeline was. This was barely noticeable when the game ran fast, but when you dipped down into 20 or 30 fps moving the mouse became a bit of a speculative operation. Today, most everything (including Javascript, via CSS) supports full-colour custom cursors.
 
+<em>
+%p Update: Sebastian DeRossi, from the CreateJS team, has sent me a reworked version previous minesweeper example!
+= codeViewer("mines-3", 320, 320, "~/2-2 Minesweeper Remastered.html")
+<p>
+To be honest, it has been about half a year since I wrote this and he replied and I got around to trying to figure out what was happening. I don't really know what to make of this, code-wise… 
+= emote("pensive") 
+It's a remarkably different way to do things, and probably quite a bit more robust!
+</p>
+</em>
 
-= codeViewer("resize-1", 300, 250, "~/3-0 Resize.html")
 %h3 Example 3: Resizing
 
 %p A proper web-based game ought to be able to resize gracefully with the browser, especially on mobile where a game might be flipped around as the device rotates.
@@ -176,12 +189,11 @@
 
 
 %h3 Example 4: Working with the DOM
-%p When making an HTML5 game, it is a good idea to actually use traditional HTML to lay out the interface for your game. It is, after all, what HTML was born for.
+%p When making an HTML5 game, it is a good idea to actually use traditional HTML5 to lay out the interface for your game. Layout is, after all, what HTML5 was born for.
 
 = codeViewer("DOM-1", 300, 200, "~/4-0 DOM Interface.html")
 %p In this example, we'll use the titular character from <a href="http://www.frogatto.com/">Frogatto & Friends</a>, and display a small interactive message.
 %p <span class="cjs-line 72">When our character is clicked on</span>, <span class="cjs-line 77">we register an event handler for the mouse move event</span> so we can drag Frogatto around. When that triggers, we <span class="cjs-line 81">draw him</span> and then <span class="cjs-line 80">recalculate the position of the speech bubble</span>. (If we don't do both these at once, it will look strange as the speech bubble will move across the screen at a higher framerate than Frogatto will.) To extract the positioning information for the HTML speech bubble, we'll use <span class="cjs-line 95">the player's localToGlobal function</span> and specify an offset for the speech bubble to be at.
-
 
 %h3 Example 5: Reading from Canvas
 %p While CreateJS is nice, sometimes you want to "drop down to the wire"… so to speak… and work with the raw canvas itself. CreateJS imposes some restrictions on how we can do this – we can't just interject arbitrary commands into our drawing chain. We can, however, read from or write to a cached canvas. In the following example, we'll write a minimalistic game to use as the seed data, and then write a droplet pixel effect in Javascript.
