--- a/css/Grey and Blue.css.less
+++ b/css/Grey and Blue.css.less
@@ -51,7 +51,7 @@ body {
 	min-width: 150px;
 	max-width: 1000px;
 	margin: auto;
-	font-size: large;
+	//font-size: large;
 }
 
 @media (max-width: 480px) {
