Added an actual RSS feed. Still manually generated, though.

--- a/contact.html.haml
+++ b/contact.html.haml
@@ -19,7 +19,7 @@
 			%a{"href"=>"contact.html"}<
 				%img{"src"=>"images/icons/chat2.svg", "alt"=>""}>
 				%div contact
-			%a{"href"=>"feeds.html"}<
+			%a{"href"=>"rss.xml"}<
 				%img{"src"=>"images/icons/rss.svg", "alt"=>""}>
 				%div rss
 		#content-holder
