--- a/rss.xml.haml
+++ b/rss.xml.haml
@@ -1,4 +1,5 @@
 :ruby
+	# This post compiled by compile.sh.
 	# Next Steps: Make entries defined by machine, pulling from the actual files.
 	
 	# Programatically generated entries for Blog Posts.
@@ -15,6 +16,10 @@
 			title: "Practical CreateJS Examples",
 			text: "I have found it difficult to find nice, simple examples of how to lay out an EaselJS program. The documentation and examples generally do a good job of covering the nuts and bolts of the library, but I find that some additional assembly instructions would be helpful. So, in rough order of my progression through the library, here are 5 examples:",
 			url: "http://localhost/ddr0.github.com/blog.html#3",
+		},{
+			title: "Gifs to Pngs",
+			text: "An improved script to convert gif animations to spritesheet pngs.",
+			url: "http://localhost/ddr0.github.com/blog.html#4",
 		}
 	]
 	
