Added cfl and canvasgame to the gallery. Added some links to the gallery.

--- a/contact.html.haml
+++ b/contact.html.haml
@@ -4,6 +4,8 @@
 		%meta{"charset"=>"utf-8"}
 		%title Contact
 		%link{"rel"=>"stylesheet", "href"=>"css/Grey and Blue.css"}
+		<link rel="alternate" type="application/rss+xml" title="RSS feed for ddr0.github.io" href="/rss.xml" />
+		<meta name="theme-color" content="#3377FF">
 	%body
 		%a{id:"skip-nav", href:"#content"}Skip navigation.
 		#badge<
