--- a/rss.xml.haml
+++ b/rss.xml.haml
@@ -24,7 +24,13 @@
 	]
 	
 	# Manual entries.
-	@entries += []
+	@entries += [
+		{
+			title: "Gallery Update",
+			text: "Added ComeFrom 2 and canvasgame entries to gallery.",
+			url: "https://ddr0.github.io/gallery.html",
+		}
+	]
 
 <?xml version="1.0"?>
 %rss{"version" => "2.0", "xmlns:atom" => "http://www.w3.org/2005/Atom"}
