--- a/blog.html.haml
+++ b/blog.html.haml
@@ -16,6 +16,8 @@
 		%title Blog
 		%link{"rel"=>"stylesheet", "href"=>"css/Grey and Blue.css"}
 		%link{"rel"=>"stylesheet", "href"=>"css/Blog.css"}
+		<link rel="alternate" type="application/rss+xml" title="RSS feed for ddr0.github.io" href="/rss.xml" />
+		<meta name="theme-color" content="#3377FF">
 	%body
 		%a{id:"skip-nav", href:"#content"}Skip navigation.
 		#badge<
