Added blog post on the evils of text templating.

--- a/rss.xml.haml
+++ b/rss.xml.haml
@@ -28,6 +28,10 @@
 			title: "Calculating a Bounce",
 			text: "Given a ball and a curved wall, how do we calculate the angle of the bounce of the ball?",
 			url: "https://ddr0.github.io/blog.html#5",
+		},{
+			title: "A Case Against Text Templating",
+			text: "By throwing out valuable structural information, text templating makes you write bad code.",
+			url: "https://ddr0.github.io/blog.html#6",
 		}
 	]
 
