--- a/css/Blog.css
+++ b/css/Blog.css
@@ -1,4 +1,5 @@
-#content-pane img {
+#content-pane img,
+#content-pane iframe {
   max-width: 100%;
   display: block;
   margin-left: auto;
@@ -58,9 +59,13 @@
 #content-pane h3 {
   clear: right;
 }
+#content-pane img.emote {
+  vertical-align: middle;
+}
 #content-pane code {
   white-space: pre;
 }
 #content-pane .code-container {
   overflow-x: scroll;
+  white-space: pre-line;
 }
