--- a/css/Blog.css.less
+++ b/css/Blog.css.less
@@ -1,5 +1,5 @@
 #content-pane {
-	img {
+	img, iframe {
 		max-width: 100%;
 		display: block;
 		margin-left: auto;
@@ -68,7 +68,7 @@
 	}
 	
 	img.emote {
-		
+		vertical-align: middle;
 	}
 	
 	code {
@@ -77,5 +77,6 @@
 	
 	.code-container {
 		overflow-x: scroll;
+		white-space: pre-line;
 	}
 }
