Refactored header (not fixed for responsive mobile yet).

--- a/css/grey-and-blue.css
+++ b/css/grey-and-blue.css
@@ -61,11 +61,10 @@ body {
 }
 #badge {
   display: none;
-  position: absolute;
-  overflow: hidden;
   height: 135px;
   /*Set to 146 for ribbon transparency effect.*/
   pointer-events: none;
+  width: 0;
 }
 #badge img {
   width: 325px;
@@ -77,23 +76,25 @@ body {
   transform-origin: 50% 50%;
 }
 h1 {
-  font-size: 63px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: space-between;
   min-height: 76px;
   color: #b7bece;
   background-color: #2e2f33;
-  text-align: right;
-  padding: 38px;
+  padding-right: 38px;
   /*33px*/
-  padding-bottom: 21px;
   margin: 0px;
   border-bottom: 11px solid #3377ff;
   /*We only have alpha-over blending, so to simulate the full colour we have the solid blue strip here, which will be overlaid by the large symbol, which will be overlaid by a transparent version of the border.*/
+  overflow: hidden;
 }
 h2 {
   margin: 0px;
 }
 h1 img {
-  max-width: 100%;
   height: auto;
 }
 p {
