Made header bar responsive; fixed up a few gallery issues.
And one blog issue where text was intruding between iframes.

--- a/css/blog.css
+++ b/css/blog.css
@@ -52,6 +52,10 @@
   clear: right;
   margin-left: 5px;
 }
+#content-pane .iframe-player-buttons {
+  min-width: 300px;
+  text-align: right;
+}
 #content-pane hr {
   margin-top: 5em;
   margin-bottom: 5em;
