--- a/css/blog.less
+++ b/css/blog.less
@@ -58,6 +58,11 @@
 		margin-left: 5px;
 	}
 	
+	.iframe-player-buttons {
+		min-width: 300px; //Width of our smallest decorated iFrame.
+		text-align: right;
+	}
+	
 	hr {
 		margin-top:    5em;
 		margin-bottom: 5em;
