--- a/css/gallery.less
+++ b/css/gallery.less
@@ -11,7 +11,7 @@ h2 {
 }
 
 .cover {
-	max-width: 100%;
+	max-width: 66.66%;
 }
 
 @mMargin: 2ex;
@@ -26,4 +26,9 @@ h2 {
 
 iframe {
 	border: 0 solid transparent;
+}
+
+section {
+	//Prevent sections flowing into each other.
+	overflow: hidden;
 }
