--- a/css/grey-and-blue.css
+++ b/css/grey-and-blue.css
@@ -15,13 +15,12 @@ done
 body {
   background-image: url('data:image/gif;base64,R0lGODlhJAASAKEAALG0uszMzLG0urG0uiH5BAEKAAIALAAAAAAkABIAAAJHTICpaHwLW5LxKbrwtUBn7kGOKIZkx52fOk7p6pKmN4Nv1aqmfp/GHkOxhEEczIgkymxD4HK4gSpZGGC1V0tGi76Hcyr9bgoAOw==');
   padding: 50px;
-  min-width: 150px;
-  max-width: 1000px;
+  max-width: 850px;
   margin: auto;
 }
-@media (max-width: 480px) {
+@media (max-width: 650px) {
   body {
-    padding: calc(53.8% - 200px);
+    padding: 0;
   }
 }
 #skip-nav {
@@ -58,7 +57,6 @@ body {
 }
 #content-pane a {
   color: black;
-  text-decoration: underline;
 }
 #badge {
   display: none;
@@ -74,7 +72,6 @@ body {
 }
 h1 {
   margin: 0px;
-  padding-right: 50px;
 }
 h1 img {
   vertical-align: middle;
@@ -88,14 +85,12 @@ h1 img {
 p {
   font-family: sans-serif;
 }
-a:focus {
-  outline: none;
-}
-a:hover {
-  text-decoration: underline;
-}
 #icon-bar a {
+  color: #d3d3d3;
   text-decoration: none;
+}
+#icon-bar a:hover {
+  text-decoration: underline;
 }
 #icon-bar img {
   max-width: 70px;
@@ -105,6 +100,9 @@ a:hover {
 @media (min-width: 751px) {
   body {
     padding-right: 151px;
+  }
+  h1 {
+    padding-right: 50px;
   }
   #icon-bar {
     width: 100px;
@@ -121,18 +119,18 @@ a:hover {
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    text-decoration: none;
     height: 100px;
-    color: #d3d3d3;
   }
   #icon-bar a:hover,
   #icon-bar a.selected {
     /*Originally, this worked by setting a white border of 2 and a margin of -2.
-			This works out in Chrome, which can do math. However, Firefox calculates the
-			element width as 100+2-2=99.97, which causes the icons to shift by one pixel
-			as the rounding math changes where their centerpoint is. (This seems to be
-			caused by a common browser workaround interpreting 1px borders "hairline".)
-			To work around this, we make use of a box-shadow instead of a border, which
-			doesn't affect the size of the element.*/
+				This works out in Chrome, which can do math. However, Firefox calculates the
+				element width as 100+2-2=99.97, which causes the icons to shift by one pixel
+				as the rounding math changes where their centerpoint is. (This seems to be
+				caused by a common browser workaround interpreting 1px borders "hairline".)
+				To work around this, we make use of a box-shadow instead of a border, which
+				doesn't affect the size of the element.*/
     box-shadow: -2px 0px 0px 0px #ffffff;
   }
   #icon-bar a:nth-last-child(odd) {
@@ -160,74 +158,31 @@ a:hover {
     display: block;
   }
 }
-@media (max-width: 590px) {
+@media (max-width: 750px) {
   /*590 is the minimum width "gallery" will fit into the header.*/
-  #icon-bar {
-    float: left;
-    margin: 18px;
-    width: 250px;
-  }
-  h1 {
-    font-size: 1em;
-  }
-  #icon-bar img {
-    float: left;
-  }
-  #icon-bar a {
+  #content-header {
     display: block;
-    width: 50px;
-    float: left;
-    color: #d3d3d3;
   }
-  #icon-bar div {
-    width: 100%;
-    clear: both;
+  #content-header h1 {
+    display: inline-block;
+    margin: 40px 0 0 40px;
   }
-}
-@media (min-width: 591px) and (max-width: 750px) {
   #icon-bar {
-    float: left;
-    clear: none;
-    width: 100px;
-    margin: 18px;
-  }
-  #icon-bar div {
-    padding-top: 15px;
-    width: 50px;
-  }
-  #icon-bar :hover {
-    color: #ffffff;
-    text-shadow: 0px 0px 5px #000000;
-    text-decoration: none;
-  }
-  #icon-bar a {
-    color: rgba(255, 255, 255, 0);
-  }
-  #icon-bar :nth-child(even) div {
+    display: inline-flex;
     float: right;
-    margin-right: -50px;
-    text-align: left;
-  }
-  #icon-bar :nth-child(odd) div {
-    float: left;
-    margin-left: -50px;
-    text-align: right;
-  }
-}
-@media (max-width: 260px) {
-  #icon-bar {
-    width: 100%;
+    margin: 30px;
   }
   #icon-bar img {
-    width: 80%;
-    height: auto;
-    padding: 15%;
-    padding-bottom: 5px;
+    width: 40px;
+    height: 40px;
   }
   #icon-bar a {
-    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
   }
-  #icon-bar div {
+  #icon-bar a.selected {
     display: none;
   }
 }
